--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,13 +15,13 @@ jobs:  # Définition des jobs à exécuter lors de l'événement déclencheur
       - uses: actions/checkout@v3  # Récupération du code source du référentiel
 
       - name: Build the Docker image  # Nom de l'étape pour construire l'image Docker
-        run: docker build ./App -t ${{ secrets.devops_username }}/projet-flask-v0.1:${{ github.sha }}  # Commande pour construire l'image Docker avec des tags spécifiques
+        run: docker build ./App -t ${{ secrets.DEVOPS_USERNAME }}/projet-flask-v0.1:${{ github.sha }}  # Commande pour construire l'image Docker avec des tags spécifiques
 
       - name: Log in to Docker Registry  # Nom de l'étape pour se connecter au registre Docker
-        run: echo "${{ secrets.devops_username }}" | docker login docker.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin  # Commande pour se connecter au registre Docker en utilisant les secrets du référentiel
+        run: echo "${{ secrets.DEVOPS_TOKEN }}" | docker login docker.io -u ${{ secrets.DEVOPS_USERNAME }} --password-stdin  # Commande pour se connecter au registre Docker en utilisant les secrets du référentiel
 
       - name: Push the Docker image  # Nom de l'étape pour pousser l'image Docker vers le registre
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/projet-flask-v0.1:${{ github.sha }}  # Commande pour pousser l'image Docker vers le registre en utilisant les secrets du référentiel
+        run: docker push ${{ secrets.DEVOPS_USERNAME }}/projet-flask-v0.1:${{ github.sha }}  # Commande pour pousser l'image Docker vers le registre en utilisant les secrets du référentiel
 
   on-failure:  # Job à exécuter en cas d'échec du workflow
     runs-on: ubuntu-latest  # Utilisation de l'image Ubuntu la plus récente pour exécuter le job
